# agentic-sim

./: .env.example  .gitignore  README.md  pyproject.toml
configs/: demo_lumi.json  scale_sweep_aitta.json  scale_sweep_mock.json  storm_fixture.json  storm_scale.json  storm_small.json  storm_sweep.json  supply_chain_fixture.json  supply_chain_scale.json  supply_chain_small.json  supply_chain_sweep.json
data/fixtures/: storm_helsinki_oulu.json  supply_chain_nordic.json
docs/: amd_vllm_lumi_tuning.md  architecture.md  execution_model.md  lumi.md  roadmap.md  scenario_storm.md  scenario_supply_chain.md  storage.md
scripts/: aggregate_runs.sh  dashboard.py  run_local.sh  run_lumi.sh  run_lumi_array.sh
src/agentic_sim/: cli.py  config.py  sweep.py
src/agentic_sim/engine/: __init__.py  clock.py  runtime.py  simulation_engine.py
src/agentic_sim/environment/: __init__.py  base.py  storm_env.py  supply_chain_env.py
src/agentic_sim/execution/: __init__.py  aitta_backend.py  backend_factory.py  base.py  batcher.py  context_builder.py  mock_backend.py  rule_backend.py  supply_chain_backend.py
src/agentic_sim/messaging/: __init__.py  router.py
src/agentic_sim/models/: __init__.py  agent.py  environment.py  event.py  execution.py  message.py  trace.py
src/multiagent_demo/: __init__.py  cli.py  config.py
tests/: test_aitta_backend.py  test_cli.py  test_config.py  test_engine.py  test_env.py  test_fixtures.py  test_models.py  test_replay.py  test_scheduler.py  test_state_store.py  test_storm_scenario.py  test_supply_chain_scenario.py  test_sweep.py
(+52 files in other folders)
