[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "multiagent-lumi-demo"
version = "0.1.0"
description = "Minimal event-driven multi-agent simulation runtime for LUMI experiments."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "LUMI multi-agent demo contributors" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
multiagent-demo = "multiagent_demo.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
