[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-sim"
version = "0.1.0"
description = "Minimal event-driven multi-agent simulation runtime for scalable experiments."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Agentic simulation runtime contributors" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
agentic-sim = "agentic_sim.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
